Added new versions

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-build
-node_modules
-coverage
-package-lock.json
+# 15.1.1/
+15.1.1/build
+15.1.1/node_modules
+15.1.1/coverage
+15.1.1/package-lock.json
+
+# 16.1.7/
+16.1.7/build
+16.1.7/node_modules
+16.1.7/coverage
+16.1.7/package-lock.json
+
+# 17.1.1/
+17.1.1/build
+17.1.1/node_modules
+17.1.1/coverage
+17.1.1/package-lock.json
